Update to java 22